# G4Starter

./: .gitignore  CONTRIBUTING.md  G4Starter.spec  LICENSE  README.md  build.py  install.sh  requirements.txt
.github/workflows/: build.yml  homebrew.yml  release.yml  winget.yml
cookiecutter-g4starter/: cookiecutter.json
cookiecutter-g4starter/hooks/: post_gen_project.py
cookiecutter-g4starter/{{cookiecutter.project_name}}/: CMakeLists.txt  main.cc  run.mac  vis.mac
cookiecutter-g4starter/{{cookiecutter.project_name}}/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SensitiveDetector.hh  SensitiveDetectorHit.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
cookiecutter-g4starter/{{cookiecutter.project_name}}/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
src/: cli.py  generator.py  main.py
tests/: test_executable.py  test_generator.py
